--- a/src/App.css
+++ b/src/App.css
@@ -61,11 +61,7 @@ h1 {
   border-radius: 0 4px 4px 0;
   cursor: pointer;
   outline: none;
-  background: linear-gradient(
-    90deg,
-    rgba(93, 12, 255, 1) 0%,
-    rgba(155, 0, 250, 1) 100%
-  );
+  background: linear-gradient(90deg, rgb(255, 12, 12) 0%, rgb(42, 250, 0) 100%);
   color: #fff;
   text-transform: capitalize;
 }
@@ -77,8 +73,8 @@ h1 {
 .todo-button.edit {
   background: linear-gradient(
     90deg,
-    rgba(20, 159, 255, 1) 0%,
-    rgba(17, 122, 255, 1) 100%
+    rgba(20, 157, 255, 0.288) 0%,
+    rgb(17, 255, 243) 100%
   );
   padding: 16px 22px;
 }
@@ -98,7 +94,7 @@ h1 {
   background: linear-gradient(
     90deg,
     rgba(255, 118, 20, 1) 0%,
-    rgba(255, 84, 17, 1) 100%
+    rgba(255, 84, 17, 0.512) 100%
   );
 
   padding: 16px;
